sdk-web-js/public/styles.css
:root {
    font-family: sans-serif;
}

.main {
    width: 100%;
    height: 100vh;
}

.container {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;

    width: 900px;
    height: 500px;
}

.capture-zone {
    width: 400px;
    height: 100%;
}

.output-zone {
    width: 400px;
    height: 100%;
    border: dotted 3px gray;
}

.recorder-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    min-height: 225px;
    max-height: 400px;
}

.recorder-wrapper {
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    max-height: 400px;
}

.video,
.canvas {
    position: absolute;
    top: 0;
    left: 0;
    max-width: 400px;
    max-height: 400px;
    border-radius: 10px;
}

.canvas {
    z-index: 2;
    transform: scaleX(-1);
}

.video {
    z-index: 1;
    transform: scaleX(-1);
    box-shadow: 15px;
}

.item-center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.buttons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 10px;
    width: 100%;
    margin-top: 25px;
}

.btn {
    display: inline-block;
    align-items: center;
    vertical-align: top;
    padding: 10px;
    border: solid 1px #333333;
    border-radius: 10px;
    background-color: #333333;
    color: #ffffff;
    font-size: 16px;
    cursor: pointer;
    width: 100px;
    z-index: 5;
}

.btn:disabled {
    background-color: #ccc;
    border-color: #ccc;
    cursor: auto;
}

.hidden {
    display: none;
}

.capture-btn:hover {
    background-color: #444444;
}

.output-label {
    color: #333333;
    font-family: monospace;
    font-size: 16px;
}

.output-video {
    width: 400px;
    height: 268px;
}

.preset-selector {
    margin: 25px;
    text-align: center;
}

.preset-select {
    border: solid 1px #333;
    width: 200px;
    height: 35px;
    padding: 0 2px;
    border-radius: 10px;
}

